# Roblox-Freedom-Distribution

./: .gitignore  .gitmodules  AnalysticsSettings.xml  CHANGELOG.md  CONTRIBUTING.md  Credits.md  GameConfig.toml  GlobalBasicSettings_13.xml  GlobalSettings_13.xml  LEGAL.md  README-LINUX.md  README.md  ROADMAP.md  ReleaseNewVersion.ps1  StartClient.bat  StartRCC.bat  Thumbs.db  UploadPlace.bat  _.sqlite-journal  _commit.ps1  _pack.ps1  _pyinstaller.ps1  _release.ps1  auth_cache.json  baseplate.rbxl  o.lua  oldREADME.md  pyrightconfig.json  userids.json
Source/: .gitignore  Icon.icns  README.md  Thumbs.db  _main.py  android_fflags.json  app_config_studio.json  const.py  leg.rbxl  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  versions.py  windows_2023_fflags.json
Source/assets/: __init__.py  _main.py  const.py  download.py  extract.py  extractor.py  grabber.py  material.py  mesh_convert.py  queue.py  rbxm_parse.py  returns.py  thumbnail.py
Source/bridge/: _main.py  logic.py
Source/config/: README.md  __init__.py  _logic.py  _main.py  allocateable.py  base_types.py  custom_types.py  structure.py  user_dict.py
Source/config_type/: _logic.py
Source/data_transfer/: README.md  __init__.py  _main.py  transferer.py
Source/downloader/: __init__.py
Source/enums/: AssetType.py  ChatStyle.py  PlaceRigChoice.py  PlaceYear.py
Source/extractor/: __init__.py
Source/game/: assets.py  user.py
Source/game_config/: README.md  __init__.py  _logic.py  _main.py  allocateable.py  logic.py  structure.py
Source/launcher/: README.md  __init__.py  (+7 more)
(+3811 files in other folders)
