[project]
name = "roblox_freedom_distribution"
version = "0.54.1"
dependencies = [
	"pyOpenSSL==24.0.0",
	"trustme==1.2.0",
	"certifi==2024.8.30",
	"urllib3==2.2.3",
	"pyzstd==0.16.2",
	"tomli==2.2.1",
	"py7zr==0.22.0",
	"lz4==4.3.3",
	"vendored_tqdm @ git+https://github.com/Windows81/Vendored-Tqdm",
]

[project.optional-dependencies]
pyinstaller = ["pyinstaller==6.11.1", "pillow==11.0.0"]
